--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "compression": "^1.7.1",
-    "polka": "next",
+    "express": "^4.17.1",
     "sirv": "^1.0.0"
   },
   "devDependencies": {
@@ -34,7 +34,7 @@
     "rollup": "^2.3.4",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
-    "sapper": "^0.28.0",
+    "sapper": "^0.29.2",
     "svelte": "^3.17.3",
     "svelte-check": "^1.0.46",
     "svelte-preprocess": "^4.3.0",
