--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "@prisma/client": "^2.28.0",
     "apollo-server-express": "^3.1.1",
+    "bcrypt": "^5.0.1",
     "compression": "^1.7.1",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
+    "jsonwebtoken": "^8.5.1",
     "prisma": "^2.28.0",
     "sirv": "^1.0.0"
   },
@@ -33,7 +35,9 @@
     "@rollup/plugin-typescript": "^6.0.0",
     "@rollup/plugin-url": "^5.0.0",
     "@tsconfig/svelte": "^1.0.10",
+    "@types/bcrypt": "^5.0.0",
     "@types/compression": "^1.7.0",
+    "@types/jsonwebtoken": "^8.5.4",
     "@types/node": "^16.4.8",
     "@types/polka": "^0.5.1",
     "rollup": "^2.3.4",
@@ -43,6 +47,7 @@
     "svelte": "^3.17.3",
     "svelte-check": "^1.0.46",
     "svelte-preprocess": "^4.3.0",
+    "ts-node": "^10.1.0",
     "tslib": "^2.0.1",
     "typescript": "^4.0.3"
   }
