--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "apollo-server-express": "^3.1.1",
     "bcrypt": "^5.0.1",
     "compression": "^1.7.1",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "graphql": "^15.5.1",
     "jsonwebtoken": "^8.5.1",
@@ -37,6 +38,7 @@
     "@tsconfig/svelte": "^1.0.10",
     "@types/bcrypt": "^5.0.0",
     "@types/compression": "^1.7.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/node": "^16.4.8",
     "@types/polka": "^0.5.1",
