--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "export": "sapper export --legacy",
     "start": "node __sapper__/build",
     "validate": "svelte-check --ignore src/node_modules/@sapper",
-    "gen": "prisma generate"
+    "gen": "prisma generate",
+    "db": "prisma studio"
   },
   "dependencies": {
     "@prisma/client": "^2.28.0",
