--- a/package.json
+++ b/package.json
@@ -4,54 +4,42 @@
   "private": true,
   "version": "0.0.1",
   "scripts": {
-    "dev": "sapper dev",
-    "build": "sapper build --legacy",
-    "export": "sapper export --legacy",
-    "start": "node __sapper__/build",
-    "validate": "svelte-check --ignore src/node_modules/@sapper",
+    "dev": "svelte-kit dev",
+    "build": "svelte-kit build",
+    "preview": "svelte-kit preview",
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+    "start": "echo TODO",
     "gen": "prisma generate",
     "db": "prisma studio"
   },
   "dependencies": {
+    "@fontsource/fira-mono": "^4.5.0",
     "@prisma/client": "^2.28.0",
-    "apollo-server-express": "^3.1.1",
+    "apollo-server-lambda": "^3.1.1",
     "bcrypt": "^5.0.1",
-    "compression": "^1.7.1",
-    "cookie-parser": "^1.4.5",
-    "express": "^4.17.1",
+    "cookie": "^0.4.1",
     "graphql": "^15.5.1",
     "jsonwebtoken": "^8.5.1",
-    "prisma": "^2.28.0",
-    "sirv": "^1.0.0"
+    "prisma": "^2.28.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/runtime": "^7.0.0",
-    "@rollup/plugin-babel": "^5.0.0",
-    "@rollup/plugin-commonjs": "^14.0.0",
-    "@rollup/plugin-node-resolve": "^8.0.0",
-    "@rollup/plugin-replace": "^2.4.0",
-    "@rollup/plugin-typescript": "^6.0.0",
-    "@rollup/plugin-url": "^5.0.0",
-    "@tsconfig/svelte": "^1.0.10",
+    "@sveltejs/kit": "next",
     "@types/bcrypt": "^5.0.0",
-    "@types/compression": "^1.7.0",
+    "@types/cookie": "^0.4.1",
     "@types/cookie-parser": "^1.4.2",
     "@types/jsonwebtoken": "^8.5.4",
-    "@types/node": "^16.4.8",
-    "@types/polka": "^0.5.1",
-    "rollup": "^2.3.4",
-    "rollup-plugin-svelte": "^7.0.0",
-    "rollup-plugin-terser": "^7.0.0",
-    "sapper": "^0.29.2",
-    "svelte": "^3.17.3",
-    "svelte-check": "^1.0.46",
-    "svelte-preprocess": "^4.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
+    "@typescript-eslint/parser": "^4.28.5",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-svelte3": "^3.2.0",
+    "svelte": "^3.34.0",
+    "svelte-check": "^2.0.0",
+    "svelte-preprocess": "^4.0.0",
     "ts-node": "^10.1.0",
     "tslib": "^2.0.1",
     "typescript": "^4.0.3"
-  }
+  },
+  "type": "module"
 }
