Add tailwind css

--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "private": true,
   "version": "0.0.1",
   "scripts": {
-    "dev": "svelte-kit dev",
-    "build": "svelte-kit build",
+    "dev:app": "svelte-kit dev",
+    "build:app": "svelte-kit build",
     "preview": "svelte-kit preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+    "tailwind:postcss": "postcss src/lib/styles/tailwind.css -o src/lib/styles/tailwind-output.css",
+    "tailwind:watch": "TAILWIND_MODE=watch NODE_ENV=development yarn tailwind:postcss -w",
+    "tailwind:build": "TAILWIND_MODE=build NODE_ENV=production yarn tailwind:postcss",
+    "dev": "concurrently \"yarn dev:app\" \"yarn tailwind:watch\"",
+    "build": "yarn tailwind:build && yarn run build:app",
     "start": "echo TODO",
     "gen": "prisma generate",
     "db": "prisma studio"
@@ -29,12 +34,17 @@
     "@types/jsonwebtoken": "^8.5.4",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
+    "autoprefixer": "^10.3.1",
+    "concurrently": "^6.2.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.0",
+    "postcss": "^8.3.6",
+    "postcss-cli": "^8.3.1",
     "svelte": "^3.34.0",
     "svelte-check": "^2.0.0",
     "svelte-preprocess": "^4.0.0",
+    "tailwindcss": "^2.2.7",
     "ts-node": "^10.1.0",
     "tslib": "^2.0.1",
     "typescript": "^4.0.3"
