--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev:app": "svelte-kit dev",
     "build:app": "svelte-kit build",
-    "preview": "svelte-kit preview",
+    "start": "svelte-kit preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "tailwind:postcss": "postcss src/lib/styles/tailwind.css -o src/lib/styles/tailwind-output.css",
@@ -14,7 +14,6 @@
     "tailwind:build": "TAILWIND_MODE=build NODE_ENV=production yarn tailwind:postcss",
     "dev": "concurrently \"yarn dev:app\" \"yarn tailwind:watch\"",
     "build": "yarn tailwind:build && yarn run build:app",
-    "start": "echo TODO",
     "gen": "prisma generate",
     "db": "prisma studio"
   },
@@ -27,6 +26,7 @@
     "prisma": "^2.28.0"
   },
   "devDependencies": {
+    "@sveltejs/adapter-node": "^1.0.0-next.36",
     "@sveltejs/kit": "next",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie": "^0.4.1",
