--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "prisma": "^2.28.0"
   },
   "devDependencies": {
-    "@sveltejs/adapter-node": "^1.0.0-next.36",
+    "@sveltejs/adapter-node": "next",
     "@sveltejs/kit": "next",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie": "^0.4.1",
