--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
 		"esModuleInterop": true,
 		"skipLibCheck": true,
 		"forceConsistentCasingInFileNames": true,
+    "strict": true,
 		"baseUrl": ".",
 		"allowJs": true,
 		"checkJs": true,
