--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@fontsource/fira-mono": "^4.5.0",
     "@prisma/client": "^2.28.0",
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "cookie": "^0.4.1",
     "jsonwebtoken": "^8.5.1",
