--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@fontsource/fira-mono": "^4.5.0",
+    "@google-cloud/storage": "^5.12.0",
     "@prisma/client": "^2.28.0",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
