Add noEmit to tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,8 @@
 		"paths": {
 			"$lib": ["src/lib"],
 			"$lib/*": ["src/lib/*"]
-		}
+		},
+    "noEmit": true
 	},
 	"include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.ts", "src/**/*.svelte"]
 }
