--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "bcrypt": "^5.0.1",
     "cookie": "^0.4.1",
     "jsonwebtoken": "^8.5.1",
-    "prisma": "^2.28.0"
+    "prisma": "^2.28.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@sveltejs/adapter-node": "next",
@@ -34,6 +35,7 @@
     "@types/cookie": "^0.4.1",
     "@types/cookie-parser": "^1.4.2",
     "@types/jsonwebtoken": "^8.5.4",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
     "autoprefixer": "^10.3.1",
