--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "cookie": "^0.4.1",
+    "graphql": "^15.5.1",
+    "graphql-helix": "^1.7.0",
     "jsonwebtoken": "^8.5.1",
     "prisma": "^2.28.0",
     "uuid": "^8.3.2"
