--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "tailwind:postcss": "postcss src/lib/styles/tailwind.css -o src/lib/styles/tailwind-output.css",
     "tailwind:watch": "TAILWIND_MODE=watch NODE_ENV=development yarn tailwind:postcss -w",
     "tailwind:build": "TAILWIND_MODE=build NODE_ENV=production yarn tailwind:postcss",
+    "gql:gen": "houdini generate -p",
+    "gql:gen:watch": "watch 'yarn gql:gen' src/lib/graphql src/routes > /dev/null",
+    "gql:build": "echo TODO",
+    "db": "prisma studio",
+    "db:gen": "prisma generate",
     "dev": "concurrently \"yarn dev:app\" \"yarn tailwind:watch\" \"yarn db --browser none\"",
     "build": "yarn tailwind:build && yarn run build:app",
-    "gen": "prisma generate",
-    "db": "prisma studio"
+    "gen": "concurrently \"yarn db:gen\" \"yarn gql:gen\""
   },
   "dependencies": {
     "@fontsource/fira-mono": "^4.5.0",
@@ -59,7 +63,8 @@
     "tailwindcss": "^2.2.7",
     "ts-node": "^10.1.0",
     "tslib": "^2.0.1",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "watch": "^1.0.2"
   },
   "type": "module"
 }
